--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         <script src="js/app/controllers/MemoryGameController.js"></script>
         <script>
             
-            const controller = new MemoryGameController();
-            controller.draw();
-            controller.subscribeCardEvent();
+            const ctrlMemoryGame = new MemoryGameController();
+            ctrlMemoryGame.draw();
+            ctrlMemoryGame.subscribeCardEvent();
 
         </script>
     </body>
